Fixed dance source houston iframe not showing (link broken). Removed footer horizontal line. Made article embeds longer.

--- a/style.css
+++ b/style.css
@@ -287,6 +287,9 @@ iframe {
     height: auto;
 }
 
+iframe.longer {
+    height: 400px;
+}
 .content-holder {
     padding: 10px;
     position: relative;
